--- a/config.toml
+++ b/config.toml
@@ -5,8 +5,8 @@ title = "Stereotype Création"
 theme = "stereotype-theme"
 
 [params]
-    name = "Stereotype"
-    description = "Stereotype Creation"
+    name = "Stereotype Creation - Sabrina Quindroit"
+    description = "Créations de graphisme textiles, illustrations et peintures"
     email = "contact@stereotypecreation.fr"
 
     subtitle    = "Créations de graphisme textiles, illustrations et peintures"
@@ -18,7 +18,6 @@ theme = "stereotype-theme"
 
     [params.portfolio]
         title = "My Works"
-
 
     [params.about]
         title = "A propos"
